c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/compare_pointer_to_ulong.c
/* It's illegal to compare a pointer to a value with a different type */
int main(void) {
    int *ptr = 0ul; // Initializing a pointer with a null constant is allowed
    unsigned long ul = 0ul;
    return ptr == ul;
}